--- a/css/black-orange.css
+++ b/css/black-orange.css
@@ -1825,7 +1825,7 @@ svg.icon-trophy {
   opacity: .9; }
   #body_options_18 .dropplayer:hover, #body_options_18 .dropplayer:active, #body_options_18 .dropplayer:focus {
     opacity: 1;
-    color: #0099FF; }
+    color: #FFA300; }
 
 input[type="button"], input[type="submit"] {
   padding: 14px 30px;
@@ -4117,7 +4117,7 @@ table.report {
   background-color: #1f1f1f; }
 
 #monthly_calendar td.today {
-  background-color: #0099FF;
+  background-color: #FFA300;
   color: #1f1f1f;
   border-color: #db3a3a; }
 
@@ -4143,7 +4143,7 @@ table.report {
 
 #monthly_calendar td.today .calendarday {
   border-color: #db3a3a;
-  background-color: #0099FF;
+  background-color: #FFA300;
   border-bottom-color: #bf2323; }
   #monthly_calendar td.today .calendarday a:link {
     color: #1f1f1f; }
@@ -4151,7 +4151,7 @@ table.report {
     color: #1f1f1f; }
 
 .constitution-wrapper h2 {
-  color: #0099FF;
+  color: #FFA300;
   border-bottom-color: #292929; }
 
 .constitution-wrapper td.secondround {
@@ -4164,13 +4164,13 @@ table.report {
   background-color: #1f1f1f; }
 
 #body_commissioner_setup td.two_column_layout th {
-  color: #0099FF; }
+  color: #FFA300; }
 
 .draftcta {
-  border-left-color: #0099FF; }
+  border-left-color: #FFA300; }
 
 .standingscta {
-  border-left-color: #0099FF; }
+  border-left-color: #FFA300; }
 
 /*  USE THIS TO HIDE ITEMS YOU DO NOT WANT SHOWING ON YOUR DRAFT ROOM PAGE  */
 .banner-container, #tabmenu-wrap, footer {
@@ -4240,7 +4240,7 @@ table.report {
   fill: transparent; }
 
 .st3 {
-  fill: #0099FF; }
+  fill: #FFA300; }
 
 .st4 {
   display: none; }
@@ -4253,7 +4253,7 @@ table.report {
 
 .leaguename {
   font-family: "Roboto Slab";
-  color: #0099FF; }
+  color: #FFA300; }
   .leaguename .leaguename--the {
     color: #fff; }
   .leaguename .leaguename--dotus {
@@ -4261,7 +4261,7 @@ table.report {
 
 .leaguename-2line .leaguename-2line--primaryname {
   font-family: "Roboto Slab";
-  color: #0099FF;
+  color: #FFA300;
   font-weight: bold; }
 
 .leaguename-2line .leaguename-2line--secondaryname {
@@ -4317,7 +4317,7 @@ table.report {
 .container-footer {
   background-color: #1f1f1f; }
   .container-footer a:link, .container-footer a:visited {
-    color: #0099FF; }
+    color: #FFA300; }
   .container-footer ul li {
     color: #fff;
     font-family: "Roboto Slab"; }
@@ -4328,17 +4328,17 @@ table.report {
   fill: #666; }
 
 a:hover [class^="icon"] {
-  fill: #0099FF; }
+  fill: #FFA300; }
 
 input[type="button"],
 input[type="submit"] {
-  background-color: #0099FF;
-  border-color: #0099FF;
+  background-color: #FFA300;
+  border-color: #FFA300;
   color: #fff; }
 
 input[type="button"]:hover,
 input[type="submit"]:hover {
-  background-color: #0099FF;
+  background-color: #FFA300;
   border-color: #87abee;
   color: #fff; }
 
@@ -4351,24 +4351,24 @@ input#chat_text_field {
   color: #333; }
 
 form.reportform input[type="submit"] {
-  background: #0099FF;
+  background: #FFA300;
   color: #fff; }
 
 .btn-primary a,
 .btn-primary a:link,
 .btn-primary a:visited {
-  background-color: #0099FF;
+  background-color: #FFA300;
   color: #fff; }
 
 .btn-primary a:hover {
-  background-color: #0099FF;
+  background-color: #FFA300;
   color: #fff; }
 
 .mb svg.icon-chevron-right {
-  fill: #0099FF; }
+  fill: #FFA300; }
 
 .mb svg.icon-chevron-right:hover {
-  fill: #0099FF; }
+  fill: #FFA300; }
 
 #body_live_scoring_summary table.report .report {
   background-color: #fff; }
@@ -4383,7 +4383,7 @@ div#scoreboardTooltip {
   background-color: #1f1f1f; }
 
 #MFLPlayerPopupClose {
-  background: #0099FF; }
+  background: #FFA300; }
 
 #MFLPlayerPopupClose:hover {
   background: #bb2222; }
@@ -4406,7 +4406,7 @@ div#scoreboardTooltip {
     background-color: #1f1f1f; }
   .MFLGameLinks .MFLLiveClock {
     background-color: #1A1A1A;
-    border-top-color: #0099FF; }
+    border-top-color: #FFA300; }
 
 .MFLOuterTable .report td {
   padding: 6px 6px; }
@@ -4418,13 +4418,13 @@ div#scoreboardTooltip {
 
 .MFLMainScoreboard #MFLRoadScore > div,
 .MFLMainScoreboard #MFLHomeScore > div {
-  color: #0099FF;
+  color: #FFA300;
   background-color: #1f1f1f;
   -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.1); }
 
 td#myTopTableHolder td#MFLCenterTop {
-  color: #0099FF; }
+  color: #FFA300; }
 
 #starter-caption-fixed caption,
 #bench-caption-fixed caption {
@@ -4438,7 +4438,7 @@ td#myTopTableHolder td#MFLCenterTop {
 ======================================= */
 .myfantasyleague_menu {
   background: #1f1f1f;
-  border-bottom-color: #0099FF; }
+  border-bottom-color: #FFA300; }
 
 .myfantasyleague_menu, .myfantasyleague_menu ul, .myfantasyleague_menu ul li ul {
   background: #1f1f1f; }
@@ -4511,7 +4511,7 @@ td#myTopTableHolder td#MFLCenterTop {
 
 .myfantasyleague_tabmenu #homepagetabs li {
   border-right-color: #1f1f1f;
-  background-color: #0099FF;
+  background-color: #FFA300;
   border-left-color: #1f1f1f;
   border-top-color: #1f1f1f;
   border-right-color: #1f1f1f; }
@@ -4624,7 +4624,7 @@ a:link {
   color: #fff; }
 
 h2 {
-  color: #0099FF; }
+  color: #FFA300; }
 
 /*main mfl wrapper*/
 .pagebody {
@@ -4633,7 +4633,7 @@ h2 {
 caption,
 caption span {
   font-family: "Roboto Slab";
-  color: #0099FF; }
+  color: #FFA300; }
 
 th {
   color: #ccc; }
@@ -4648,7 +4648,7 @@ span.reportnavigation {
   color: #BEBEBE; }
   span.reportnavigation a:link,
   span.reportnavigation a:visited {
-    color: #0099FF; }
+    color: #FFA300; }
 
 /*reports*/
 .report-wrapper, #outerMFLScoreboardDiv, #lineup-form {
@@ -4667,7 +4667,7 @@ span.reportnavigation {
 
 .newposition td,
 .newposition th {
-  border-top-color: #0099FF; }
+  border-top-color: #FFA300; }
 
 /*add drop*/
 span#add_name_field_id {
@@ -4703,7 +4703,7 @@ span#drop_name_field_id {
     .utility-nav .svg-text .commish-link {
       border-left-color: #BEBEBE; }
   .utility-nav a:hover [class^="icon"] {
-    fill: #0099FF; }
+    fill: #FFA300; }
 
 textarea#MSG {
   background: #31382d;
@@ -4731,7 +4731,7 @@ textarea#MSG {
 
 .subtotals {
   background-color: transparent;
-  color: #0099FF; }
+  color: #FFA300; }
 
 .rfaStatus {
   color: green;
@@ -4750,14 +4750,14 @@ textarea#MSG {
   margin-top: -12px; }
 
 tr.cap_room_available_row th {
-  color: #0099FF; }
+  color: #FFA300; }
 
 .team-nav {
   background-color: #1f1f1f; }
   .team-nav .team-nav--button svg {
     fill: #666; }
   .team-nav .team-nav--button a:hover svg {
-    fill: #0099FF; }
+    fill: #FFA300; }
   .team-nav .team-nav--button .svg-text {
     color: #BEBEBE; }
   .team-nav .team-nav--button .svg-text a:link,
@@ -4765,14 +4765,14 @@ tr.cap_room_available_row th {
     color: #BEBEBE; }
 
 ::-webkit-scrollbar-thumb {
-  background: #0099FF;
+  background: #FFA300;
   border-color: #1A1A1A; }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #0099FF; }
+  background: #FFA300; }
 
 ::-webkit-scrollbar-thumb:active {
-  background: #0099FF; }
+  background: #FFA300; }
 
 ::-webkit-scrollbar-track {
   background: #1A1A1A;
@@ -4787,17 +4787,17 @@ tr.cap_room_available_row th {
 .homepagecolumn #standings h3, .homepagecolumn #brief_standings h3, .homepagecolumn .homepagemodule caption {
   background-color: transparent;
   font-family: "Roboto Slab";
-  color: #0099FF; }
+  color: #FFA300; }
 
 /*Standings*/
 .homepagecolumn #brief_standings h3, .homepagecolumn #standings h3 {
-  color: #0099FF;
+  color: #FFA300;
   border-bottom-color: #292929; }
 
 #body_standings caption, #body_standings h3 {
   background-color: transparent;
   font-family: "Roboto Slab";
-  color: #0099FF; }
+  color: #FFA300; }
 
 #standings img.standingslogo {
   margin-left: 0px;
@@ -4900,9 +4900,9 @@ tr.cap_room_available_row th {
 
 .tabbed-reports li {
   color: #fff;
-  background-color: #0099FF;
-  border-left-color: #0099FF;
-  border-right-color: #0099FF; }
+  background-color: #FFA300;
+  border-left-color: #FFA300;
+  border-right-color: #FFA300; }
 
 .tabbed-reports li:hover, .tabbed-reports li.active, .tabbed-reports li.current {
   color: #fff;
